<resources>
    <string name="app_name">UTMP APP</string>
    <string name="app_title">UTMP APP</string>

    <string name="action_delete_all">Delete All Geofences</string>

    <!-- Dialogs -->
    <string name="AreYouSure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>

    <!-- Button -->
    <string name="Button.DeleteGeofence">DELETE</string>

    <!-- Labels -->
    <string name="Label.Name">Name</string>
    <string name="Label.Latitude">Latitude</string>
    <string name="Label.Longitude">Longitude</string>
    <string name="Label.Radius">Radius</string>
    <string name="Label.AddGeofence">Add a Geofence</string>
    <!--string name="Label.EmptyState">You haven\'t created any geofences yet. Tap the plus button to create one.\n\n\nWill we ever get there?! :]</string-->
    <string name="Label.EmptyState">You can now add geofences to our stores, to get \'Discount of the Hour\' alert when you are near by.</string>

    <!-- Hints -->
    <string name="Hint.Name">Name for the geofence</string>
    <string name="Hint.Latitude" formatted="false">Latitude (%3.1f\u00B0 to %3.1f\u00B0)</string>
    <string name="Hint.Longitude" formatted="false">Longitude (%4.1f\u00B0 to %4.1f\u00B0) </string>
    <string name="Hint.Radius" formatted="false">Radius (%3.2f to %3.1f km)</string>

    <!-- Units -->
    <string name="Units.Degrees">\u00B0</string>
    <string name="Units.Kilometers">km</string>

    <!-- Notification -->
    <string name="Notification.Title">UTMP Alert</string>
    <string name="Notification.Text">Hi, Welcome to our %1$s </string>

    <!-- Notification -->
    <string name="Notification_ExitText">Thank you for visiting %1$s </string>

    <!-- Toast -->
    <string name="Toast.Validation">Please enter valid data for all fields</string>
    <string name="Toast.Error">There was an error. Please try again.</string>

    <!--Store list -->
    <string-array name="stores_array">
        <item>Near by place</item>
        <item>Computer Science Building</item>
        <item>Clark Wilson</item>
        <item>Toomey Hall</item>
        <item>Butler Carlton</item>
        <item>My Place</item>
    </string-array>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_userID">User ID</string>
    <string name="prompt_threshold">Set Threshold</string>
    <string name="prompt_cpassword">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">New User? Register</string>
    <string name="action_register_short">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_firstname">User Name</string>
    <string name="action_userID">User ID</string>
    <string name="action_threshold">Set Threshold</string>
    <string name="action_confirmpassword">Confirm Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_cpassword">Passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_userID">This userID should not be greater than 10 chars</string>
    <string name="error_invalid_threshold">Threshold should greater than or equal to 3</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to wifi check -->
    <string name="wifi_enabled">Wifi is enabled</string>
    <string name="wifi_enabling">Wifi is enabling</string>
    <string name="wifi_disabling">Wifi is disabling</string>
    <string name="wifi_disabled">Wifi is disabled</string>
    <string name="wifi_scanning">Wifi is scanning</string>
    <string name="wifi_associating">Wifi is associating with %s</string>
    <string name="wifi_dhcp">Obtaining IP address from %s</string>
    <string name="wifi_unknown">Wifi state unknown</string>

    <string name="net_ip">IP: %1$s/%2$d (%3$s)</string>
    <string name="net_carrier">CARRIER: %s</string>
    <string name="net_ssid">SSID: %s</string>
    <string name="net_mode">MODE: %s</string>
    <string name="net_mode_wifi">WiFi (%1$s %2$s)</string>
    <string name="net_mode_mobile">Mobile</string>
    <string name="net_mode_eth">Ethernet (Not supported yet)</string>
    <string name="net_mode_unknown">Unknown</string>
</resources>
